<resources>
    <string name="app_name">NewWarenqi</string>
    <string name="input_username_hint">输入用户名/手机号码</string>
    <string name="input_password">输入密码</string>
    <string name="contact_service">联系客服</string>
    <string name="online_service">在线客服</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="my_gold">我的金币</string>
    <string name="my_deposit">我的本金</string>
    <string name="see_more">查看更多</string>
    <string name="estimate_income">预估游戏收入：%1$s(今日收入%2$s)，垫付本金 %3$s</string>
    <string name="beginner_guide">新手指导</string>
    <string name="daily_sign_in">每日签到</string>
    <string name="task_center">游戏大厅</string>
    <string name="invite_friends">邀请好友</string>
    <string name="promote_rewards">推广奖励</string>
    <string name="flow_task">人气游戏</string>
    <string name="normal_task">常规游戏</string>
    <string name="direct_task">直通车游戏</string>
    <string name="activity_task">活动游戏</string>
    <string name="buy_task">高佣金游戏</string>
    <string name="advance_pay_task">优质游戏</string>
    <string name="several_days_task">多天游戏</string>
    <string name="wait_operate_task_status">待操作</string>
    <string name="seller_operating_task_status">商家处理中</string>
    <string name="wait_comment_task_status">待好评</string>
    <string name="appeal_task_status">申诉中</string>
    <string name="finished_task_status">已完成</string>
    <string name="canceled_task_status">已取消</string>
    <string name="ask_task">追评&amp;问大家</string>
    <string name="personal_info">个人资料</string>
    <string name="taobao_account">淘宝账号</string>
    <string name="real_name_auth">实名认证</string>
    <string name="huabei_account_auth">花呗号认证</string>
    <string name="my_bank_account">我的银行卡</string>
    <string name="take_settings">接单设置</string>
    <string name="capital_detail">资金明细</string>
    <string name="withdraw_gold">金币提现</string>
    <string name="withdraw_deposit">本金提现</string>
    <string name="invite_detail">邀请明细</string>
    <string name="feedback">意见反馈</string>
    <string name="notices">公告通知</string>
    <string name="help_center">帮助中心</string>
    <string name="one_yuan_shop">夺宝游戏</string>
</resources>
