<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="269dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="124px"
        android:layout_width="176px"
        android:layout_height="176px"
        android:src="@drawable/logo_land" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="92px"
        android:layout_marginTop="100px"
        android:hint="@string/input_username_hint"
        android:textColor="@color/grey_333"
        android:gravity="bottom"
        android:theme="@style/MyEditText"
        android:textColorHint="@color/grey_ddd"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="140px"
        android:hint="@string/input_password"
        android:gravity="bottom"
        android:inputType="textPassword"
        android:theme="@style/MyEditText"
        android:textColor="@color/grey_333"
        android:textColorHint="@color/grey_ddd"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="88px">

        <TextView
            android:id="@+id/btn_contact_service"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/blue_4680fe"
            android:text="@string/contact_service" />

        <TextView
            android:id="@+id/btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/forget_password" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/shape_blue_4dp_radius_btn"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:enabled="false"
        android:text="@string/login" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/blue_4680fe"
        android:layout_marginBottom="90px"
        android:layout_marginTop="56px"
        android:text="@string/register" />

</com.zhy.autolayout.AutoLinearLayout>